2001-09-07 Andreas Fink <andreas@fink.org>
	* gw/smsc_at2.c
	fixed to wait for OK while sending
	AT+CNMS to acknowledge the received
	packet. Changed the doc

2001-09-06 Bruno Rodrigues <bruno.rodrigues@litux.org>
	* userguide.xml, bb_smscconn.c, control.html, msg-decl.h, sms.c, smsbox.c,
	smsc_http.c, smsc_ois.c: replaced "class" to "mclass" to avoid future C++
	conflits
	* gw/http.c: in http_status_class, changed int class to sclass
	* gw/smsc_at2.c: removed some unused variables and added some '(' ')' to
	clean gcc warnings

2001-09-06 Andreas Fink <andreas@fink.org>
	* gw/smsc_at2.c
	fixed some oddities left over from the old driver.
	debugged for nokia and siemens. enabled hardware
	handshake for better performance.

2001-09-05 Andreas Fink <andreas@fink.org
	* gw/smscconn_p.h gw/smscconn.c gw/smsc_at2.c
	new AT driver for GSM modems. This one is operating
	in GSM Phase 2+ mode. Well tested with siemens TC35
	config options are as in old at driver with addionally:
	  speed = speed in bps. 0 = autobaud
	  modemtype = as in old driver but defaulting to autodetect
	  (can be specified by passing "auto")

2001-09-03 Bruno Rodrigues <bruno.rodrigues@litux.org>
	* Makefile.in, docs/*/*.xml: Corrected Makefiles, xml and other 
	files so now all documentation should compile
	* Makefile.in: Added RTF generation of documentation; install-docs
	now install userguide, alligata and wtls files; tweaks in jade lines
	* configure.in (and configure): changed --disable-ssl code, ssl is
	still enable per-default, but before --enable-ssl would triger 
	incorrectly --disable-ssl; 
	* debian/changelog, debian/rules: some tweaks to generate CVS deb file
	* user2.1.xml and wtls.xml: moved to own directories and renamed 
	user2.1 to alligata. Present on doc/alligata and doc/wtls
	* Makefile.in: added "convert" dependency to generated .ps files 
	from .png to be able to compile documents and done some tweaks to xml